--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-link": "^1.0.3",
     "react-native": "^0.68.2",
     "react-native-css-transformer": "^1.2.4",
+    "react-native-maps": "0.30.2",
     "react-native-paper": "^4.12.2",
     "react-native-portalize": "^1.0.7",
     "react-native-safe-area-context": "4.2.4",
