--- a/BE/package.json
+++ b/BE/package.json
@@ -18,6 +18,9 @@
   "homepage": "https://github.com/R2th/Economic-app#readme",
   "dependencies": {
     "express": "^4.18.1",
-    "redis": "^4.1.1"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "redis": "^4.1.1",
+    "sequelize": "^6.21.2"
   }
 }
