--- a/BE/.env
+++ b/BE/.env
@@ -1,10 +1,11 @@
 PORT=1234
-CLIENT_URL=example.com
+HOST='localhost'
+# CLIENT_URL=example.com
 JWT_SECRET=123456
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=admin
 MODE=development
-DB_USER=user
+DB_USER=postgres
 DB_PASSWORD=pass
 DB_URL=example.com
 DB_PORT=5432
