--- a/BE/package.json
+++ b/BE/package.json
@@ -4,7 +4,9 @@
   "description": "backend src for midterm mobile project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +20,8 @@
   "homepage": "https://github.com/R2th/Economic-app#readme",
   "dependencies": {
     "express": "^4.18.1",
+    "ip": "^1.1.8",
+    "nodemon": "^2.0.18",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "redis": "^4.1.1",
